--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: Bryan-Herrera-DEV # Your GitHub organization or username, where this repository lives
+repo: quira-status-systems # The name of this repository
 
 sites:
   - name: Quira Development environment
