--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,10 +7,7 @@ sites:
     url: https://app-dev.quira-ai.com/sign-in
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  baseUrl: /quira-status-systems
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Quira Live Status Page
   introTitle: "**QUIRA | Security**"
